<resources>
    <string name="app_name">Kheti-baadi</string>
    <string name="title_activity_home">home</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="questions">Ask Questions</string>
    <string name="crop">Crop</string>
    <string name="help">Help</string>
    <string name="home">Home</string>
    <string name="cba">CBA</string>
    <string name="cbafullform">Cost Benifit Analysis</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="zbnf">ZBNF</string>
    <string name="submit">Submit</string>
    <string name="name">Name</string>
    <string name="number">Number</string>
    <string name="address">Address</string>
    <string name="question">Question</string>
    <string name="ask_the_experts">Ask The Experts</string>
</resources>
