<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="#AD4ECE2E"
    tools:context=".Mainmenu">

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:text="@string/home"
        android:gravity="center"
        android:fontFamily="sans-serif-black"
        android:textStyle="bold"

        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crop"
        android:id="@+id/crop"
        android:onClick="opencrop"
        android:padding="10dp"
        android:layout_marginTop="50dp"
        android:textSize="30sp"
        android:fontFamily="sans-serif-medium"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/CBA"
        android:text="@string/cba"
        android:textSize="30sp"
        android:onClick="opencba"
        android:padding="10dp"
        android:layout_marginTop="25dp"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/zbnf"
        android:text="@string/zbnf"
        android:textSize="30sp"
        android:onClick="openzbnf"
        android:padding="10dp"
        android:layout_marginTop="25dp"
        />


    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/help"
        android:layout_marginTop="25dp"
        android:padding="10dp"
        android:textSize="30sp"
        android:onClick="openques"
        />
</LinearLayout>